--- a/ci/mirror.yml
+++ b/ci/mirror.yml
@@ -13,9 +13,9 @@ sync_to_github:
     - git clone $CI_REPOSITORY_URL /tmp/sync_repo
     - cd /tmp/sync_repo
     - echo "Ajout du remote GitHub..."
-    - git remote add github https://$GITHUB_TOKEN@github.com/EpitechPromo2028/B-PDG-300-LIL-3-1-PDGD06-thibault.pouch.git
+    - git remote add github https://$GITHUB_TOKEN@github.com/EpitechPromo2028/B-YEP-400-LIL-4-1-zappy-thibault.pouch.git
     - echo "Push vers GitHub..."
     - git push github main:main --force
     - echo "Synchronisation terminée !"
   variables:
-    GITHUB_REPO: "EpitechPromo2028/B-PDG-300-LIL-3-1-PDGD06-thibault.pouch"
+    GITHUB_REPO: "EpitechPromo2028/B-YEP-400-LIL-4-1-zappy-thibault.pouch.git"
