--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,8 @@ stages:
 variables:
   GIT_DEPTH: 0
 
+image: epitechcontent/epitest-docker:latest
+
 include:
   - local: 'ci/build.yml'
   - local: 'ci/mirror.yml'
