[refactor] Makefile to use wildcard for source files and improve object file generation

--- a/gui/Makefile
+++ b/gui/Makefile
@@ -12,26 +12,22 @@ ifeq ($(UNAME_S),Darwin)
     LDFLAGS = -lraylib -framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo
 endif
 
-# Répertoires
 SRC_DIR = src
 INC_DIR = include
 OBJ_DIR = obj
 
-# Fichiers source
-SOURCES = src/main.cpp src/Game.cpp src/Map.cpp src/Player.cpp src/Resource.cpp src/UI.cpp src/Inventory.cpp src/Tile.cpp src/ResourceInfo.cpp
-OBJECTS = $(SOURCES:%.cpp=$(OBJ_DIR)/%.o)
+SOURCES = $(wildcard $(SRC_DIR)/*.cpp)
+OBJECTS = $(patsubst $(SRC_DIR)/%.cpp,$(OBJ_DIR)/%.o,$(SOURCES))
 
-# Nom de l'exécutable
 TARGET = zappy_gui
 
-# Règles
 all: $(TARGET)
 
 $(TARGET): $(OBJECTS)
 	$(CXX) $(OBJECTS) -o $(TARGET) $(LDFLAGS)
 
-$(OBJ_DIR)/%.o: %.cpp
-	@mkdir -p $(OBJ_DIR)
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp
+	@mkdir -p $(dir $@)
 	$(CXX) $(CXXFLAGS) -I$(INC_DIR) -c $< -o $@
 
 clean:
@@ -44,4 +40,3 @@ fclean: clean
 re: fclean all
 
 .PHONY: all clean fclean re install-raylib install-raylib-mac setup-raylib
-
