[fix] corrected directory name from 'gui' to 'GUI' in build and test steps

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Build GUI
         run: |
-          cd gui
+          cd GUI
           make
 
   build-ai:
@@ -106,7 +106,7 @@ jobs:
 
       - name: Run GUI tests
         run: |
-          cd gui
+          cd GUI
           make test
 
   test-ai:
