[feat] Implement core AI functionality for Zappy game
- Added ai_core.py to manage the main AI loop and decision-making.
- Introduced communication.py for handling server communication and message broadcasting.
- Created models.py to define resource types and elevation requirements.
- Developed strategy.py to manage AI strategies and actions based on game state.
- Implemented utils.py for utility functions including logging and message encryption.
- Updated main.py to integrate new modules and initialize the AI.
- Modified Makefile to streamline AI compilation process.

--- a/AI/Makefile
+++ b/AI/Makefile
@@ -10,14 +10,24 @@ DIST_DIR = dist
 BUILD_DIR = build
 SPEC_DIR = spec
 
+# Module files (new modular structure)
+MODULES = ai_core.py models.py utils.py communication.py actions.py strategy.py
+
 # Required Python packages
 REQUIREMENTS = pyinstaller
 
-.PHONY: all clean fclean re zappy_ai install
+.PHONY: all clean fclean re zappy_ai install check
 
 all: $(NAME)
 
-zappy_ai: install
+# Add check target to verify all modules compile correctly
+check:
+	@echo "Checking Python syntax..."
+	@$(PYTHON) -m py_compile $(MAIN_FILE) $(MODULES)
+	@echo "All modules syntax OK"
+
+# Update zappy_ai target to depend on check
+zappy_ai: install check
 	@echo "Building $(NAME) binary..."
 	$(PYTHON) -m PyInstaller --onefile --name=$(NAME) $(MAIN_FILE)
 	@if [ -f $(DIST_DIR)/$(NAME) ]; then \
