--- a/AI/Makefile
+++ b/AI/Makefile
@@ -1,54 +1,52 @@
 ##
-## Makefile for Zappy AI
+## EPITECH PROJECT, 2025
+## zappy
+## File description:
+## Makefile for the Zappy AI client
 ##
 
 NAME = zappy_ai
 MAIN_FILE = main.py
 PYTHON = python3
-PIP = pip3
-DIST_DIR = dist
-BUILD_DIR = build
-SPEC_DIR = spec
-
-# Module files (new modular structure)
-MODULES = ai_core.py models.py utils.py communication.py actions.py strategy.py
-
-# Required Python packages
-REQUIREMENTS = pyinstaller
-
-.PHONY: all clean fclean re zappy_ai install check
 
 all: $(NAME)
 
-# Add check target to verify all modules compile correctly
-check:
-	@echo "Checking Python syntax..."
-	@$(PYTHON) -m py_compile $(MAIN_FILE) $(MODULES)
-	@echo "All modules syntax OK"
-
-# Update zappy_ai target to depend on check
-zappy_ai: install check
-	@echo "Building $(NAME) binary..."
-	$(PYTHON) -m PyInstaller --onefile --name=$(NAME) $(MAIN_FILE)
-	@if [ -f $(DIST_DIR)/$(NAME) ]; then \
-		cp $(DIST_DIR)/$(NAME) ./$(NAME); \
-		chmod +x ./$(NAME); \
-		echo "Binary $(NAME) created successfully!"; \
-	else \
-		echo "Failed to build $(NAME)"; \
-		exit 1; \
-	fi
-
-install:
-	@echo "Installing required packages..."
-	$(PIP) install $(REQUIREMENTS)
+$(NAME):
+	@echo "Building $(NAME)..."
+	@echo '#!/usr/bin/env python3' > $(NAME)
+	@echo 'import os' >> $(NAME)
+	@echo 'import sys' >> $(NAME)
+	@echo 'script_dir = os.path.dirname(os.path.abspath(__file__))' >> $(NAME)
+	@echo 'parent_dir = os.path.dirname(script_dir)' >> $(NAME)
+	@echo 'sys.path.append(parent_dir)' >> $(NAME)
+	@echo 'from AI.main import main' >> $(NAME)
+	@echo 'from AI.network_client import NetworkClient' >> $(NAME)
+	@echo 'if __name__ == "__main__":' >> $(NAME)
+	@echo '    hostname, port, name, bot_id = main()' >> $(NAME)
+	@echo '    client = NetworkClient(hostname, port, name, bot_id)' >> $(NAME)
+	@echo '    client.establish_connection()' >> $(NAME)
+	@echo '    client.run_client()' >> $(NAME)
+	@echo '    client.check_server_capacity()' >> $(NAME)
+	@echo '    client.disconnect()' >> $(NAME)
+	@chmod +x $(NAME)
+	@cp $(NAME) ../$(NAME)
+	@echo "Done! The AI client is ready to use."
 
 clean:
-	@echo "Cleaning build artifacts..."
-	rm -rf $(BUILD_DIR) $(DIST_DIR) $(NAME).spec __pycache__ */__pycache__
+	@echo "Cleaning Python cache files..."
+	@find . -name '__pycache__' -type d -exec rm -rf {} +
+	@find . -name '*.pyc' -delete
+	@echo "Done cleaning."
 
 fclean: clean
-	@echo "Removing binary..."
-	rm -f ./$(NAME)
+	@echo "Full clean: removing logs and executable..."
+	@rm -rf logs/*.log
+	@rm -f ../$(NAME)
+	@rm -f $(NAME)
+	@echo "Done with full clean."
 
 re: fclean all
+
+re: fclean all
+
+.PHONY: all clean fclean re
