--- a/SERVER/Makefile
+++ b/SERVER/Makefile
@@ -6,7 +6,7 @@
 ##
 
 NAME = zappy_server
-CFLAGS = -W -Wall -Wpedantic
+CFLAGS = -W -Wall -Wpedantic -g
 LDFLAGS = -lm
 INCLUDES = -I./include
 
@@ -23,6 +23,7 @@ SRC = 	src/server_init.c \
 	src/command/command_server/incantation.c \
 	src/command/command_server/eject.c \
 	src/command/command_server/fork.c \
+	src/command/command_server/Look.c \
 	src/command/command_gui/commands_gui_egg.c \
 	src/command/command_gui/commands_gui_extended_2.c \
 	src/command/command_gui/commands_gui_extended.c \
